# lullaby-lang

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
assets/brand/: render_icons.py
benchmarks/: .gitignore  README.md
benchmarks/crosslang/: .gitignore  LULLABY_CHEATSHEET.md  README.md  assemble_report.py  compile_data.json  corpus_data.json  corpus_tokens.py  perf_data.json  report_template.html  run_benchmark.ps1  run_compile_speed.ps1  run_corpus_perf.ps1
crates/lullaby_cli/: Cargo.toml
crates/lullaby_cli/src/: loader.rs  main.rs  manifest.rs
crates/lullaby_cli/src/commands/: native.rs  test_isolate.rs
crates/lullaby_cli/tests/: cli.rs
crates/lullaby_cli/tests/cli/: closure_conditional.rs  ffi_callbacks.rs  fmt_comments.rs  fuzz.rs  fuzz_alloc.rs  fuzz_arena.rs  fuzz_closure.rs  fuzz_narrow.rs  returned_closure.rs  scratch.rs  suite1.rs  suite10.rs  suite11.rs  suite13.rs  suite14.rs  suite15.rs  suite16.rs  suite17.rs  suite18.rs  suite19.rs  suite2.rs  suite21.rs  suite22.rs  suite27.rs  suite3.rs  suite6.rs  suite7.rs  suite8.rs  suite9.rs
crates/lullaby_diagnostics/: Cargo.toml
crates/lullaby_ir/: Cargo.toml
crates/lullaby_ir/src/: aarch64.rs  bytecode_vm.rs  elf_image.rs  elf_image_tests.rs  elf_object.rs  frame_layout.rs  ir_env.rs  ir_interpreter.rs  ir_interpreter_builtins.rs  ir_optimizer_constfold.rs  ir_optimizer_copyprop.rs  ir_optimizer_cse.rs  ir_optimizer_dce.rs  ir_optimizer_inline.rs  lib.rs  native_contract.rs  native_object.rs  native_object_arena.rs  native_object_asm.rs  native_object_asm_tests.rs  native_object_closure.rs  native_object_closure_ctx.rs  native_object_eligibility.rs  native_object_expr.rs  native_object_frame.rs  native_object_heapbox.rs  native_object_heapbox_tests.rs  native_object_lowering.rs  native_object_match.rs  native_object_method.rs  native_object_program.rs  native_object_rawptr.rs  native_object_rename.rs  native_object_runtime_helpers.rs  native_object_stmt.rs  native_object_tailvalue_tests.rs  native_object_types.rs  native_object_void_tests.rs  native_object_writers.rs  native_program_tests.rs  (+7 more)
crates/lullaby_ir/tests/: native_object_snapshots.rs
crates/lullaby_ir/tests/snapshots/: alpha1_native_backend_contract.json
crates/lullaby_lexer/: Cargo.toml
crates/lullaby_loader/: Cargo.toml
crates/lullaby_loader/src/: lib.rs  loader.rs
crates/lullaby_lsp/: Cargo.toml
crates/lullaby_parser/: Cargo.toml
crates/lullaby_runtime/: Cargo.toml
crates/lullaby_semantics/: Cargo.toml
crates/lullaby_wasm/: Cargo.toml
crates/nous_cli/: Cargo.toml
crates/nous_cli/src/: main.rs
crates/nous_cli/tests/: cli.rs
crates/nous_diagnostics/: Cargo.toml
crates/nous_ir/: Cargo.toml
crates/nous_ir/src/: lib.rs
crates/nous_lexer/: Cargo.toml
crates/nous_parser/: Cargo.toml
crates/nous_runtime/: Cargo.toml
crates/nous_semantics/: Cargo.toml
documents/: 1_0_stable_assessment.md  alpha1_acceptance_criteria.md  alpha1_language_surface.md  alpha1_release_notes.md  atomics_design.md  brand_guidelines.md  closures_capture_design.md  closures_design.md  concurrency_design.md  concurrency_model_design.md  concurrency_semantics.md  contributor_guide.md  core_language_rules.md  diagnostic_registry.md  distribution_design.md  enum_and_match_design.md  execution_tiers_and_1_0_scope.md  ffi_design.md  finish_line_plan.md  formal_grammar.md  freestanding_tier_design.md  generics_design.md  implementation_plan.md  language_specification.md  language_surface.md  linker_and_binary_output_plan.md  lsp_design.md  lullaby_compilation_architecture.md  lullaby_control_structures.md  lullaby_error_handling.md  lullaby_input_output.md  lullaby_memory_management.md  lullaby_syntax_design.md  lullaby_type_system.md  memory_model_decision.md  modules_design.md  name_research.md  native_backend_contract.md  nous_lang_compilation_architecture.md  nous_lang_control_structures.md  (+23 more)
examples/: README.md
installer/: lullaby.wxs
offline_docs/: generate_offline_docs.py  index.html  verify_offline_docs.py
scripts/: build_windows_installer.py  install_windows_path.ps1  package_windows_portable.ps1  publish_github_release.ps1  uninstall_windows_path.ps1  verify_markdown_refs.ps1  verify_release.ps1
web/: README.md  install.ps1  install.sh
(+397 files in other folders)
