[workspace]
resolver = "3"
members = [
    "crates/nous_cli",
    "crates/nous_diagnostics",
    "crates/nous_ir",
    "crates/nous_lexer",
    "crates/nous_parser",
    "crates/nous_runtime",
    "crates/nous_semantics",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/emilfilipov/nous_lang"
