[workspace]
resolver = "3"
members = [
    "crates/lullaby_cli",
    "crates/lullaby_diagnostics",
    "crates/lullaby_ir",
    "crates/lullaby_lexer",
    "crates/lullaby_parser",
    "crates/lullaby_runtime",
    "crates/lullaby_semantics",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/emilfilipov/lullaby"
