[package]
name = "lullaby_loader"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
lullaby_diagnostics = { path = "../lullaby_diagnostics" }
lullaby_lexer = { path = "../lullaby_lexer" }
lullaby_parser = { path = "../lullaby_parser" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
