[package]
name = "nous_cli"
version = "0.1.0-alpha.2"
edition = "2024"

[[bin]]
name = "nlang"
path = "src/main.rs"

[dependencies]
nous_diagnostics = { path = "../nous_diagnostics" }
nous_ir = { path = "../nous_ir" }
nous_lexer = { path = "../nous_lexer" }
nous_parser = { path = "../nous_parser" }
nous_runtime = { path = "../nous_runtime" }
nous_semantics = { path = "../nous_semantics" }
